refactor: move permission APIs to manage module, security no DB dependency